correction and practice

--- a/practice/index.html
+++ b/practice/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello world JS file</title>
+    <title>HelloWorld</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="./3-hello-world.js"></script>
+    <div id="root">
+      <!-- <h1>Hello world</h1> -->
+    </div>
+    <script src="./index.js"></script>
   </body>
 </html>
