--- a/practice/index.html
+++ b/practice/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <div id="root">
-      <!-- <h1>Hello world</h1> -->
+      <h1>Not rendering</h1>
     </div>
-    <script src="./index.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
